--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,8 @@ dist
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -154,3 +155,6 @@ Temporary Items
 
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
+
+.vscode/*
+*.code-workspace
